# base-receita-federal

./: .gitignore  README.md
app/: .gitignore  Cargo.toml  create-package.sh
app/src/: api.rs  cnae_secundaria.rs  database.rs  download.rs  main.rs  models.rs  process.rs  ui.rs  utils.rs
scripts/: run.bat  run.sh  start-api.bat  start-api.sh
