[package]
name = "cnpj-sqlite"
version = "0.1.0"
edition = "2021"
authors = ["CNPJ SQLite Rust"]
description = "Conversor de dados públicos de CNPJ para SQLite em Rust"

[dependencies]
# HTTP e download
reqwest = { version = "0.11", features = ["blocking", "cookies", "stream"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# HTML parsing
scraper = "0.18"

# CSV processing
csv = "1.3"

# SQLite
rusqlite = { version = "0.31", features = ["bundled"] }

# ZIP
zip = "0.6"
flate2 = "1.0"

# Utilitários
glob = "0.3"
chrono = "0.4"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
indicatif = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
encoding_rs = "0.8"
encoding_rs_io = "0.1"
colored = "2.1"

# Web API
actix-web = "4"
actix-rt = "2"
num_cpus = "1"

[profile.release]
opt-level = "z"      # Otimização para tamanho
lto = true           # Link-time optimization
codegen-units = 1    # Melhor otimização
strip = true         # Remove símbolos de debug (se suportado)

